@@ -511,10 +511,14 @@ public class Test {
       cur_value = export_dbm.increment("10000", Long.MIN_VALUE, 0, status);
       check(status.equals(Status.SUCCESS));
       check(cur_value == 10004);
-      check(export_dbm.compareExchange("1", "100", "101").equals(Status.DUPLICATION_ERROR));
+      check(export_dbm.compareExchange("1", "100", "101").equals(Status.INFEASIBLE_ERROR));
       check(export_dbm.compareExchange("1", "101", null).equals(Status.SUCCESS));
       String value = export_dbm.get("1", status);
       check(status.equals(Status.NOT_FOUND_ERROR));
+      check(export_dbm.compareExchange("1", null, "zzz").equals(Status.SUCCESS));
+      check(export_dbm.compareExchange("1", null, "yyy").equals(Status.INFEASIBLE_ERROR));
+      check(export_dbm.get("1").equals("zzz"));
+      check(export_dbm.compareExchange("1", "zzz", null).equals(Status.SUCCESS));
       check(export_iter.first().equals(Status.SUCCESS));
       check(export_iter.set("foobar").equals(Status.SUCCESS));
       check(export_iter.remove().equals(Status.SUCCESS));
