@@ -2,7 +2,8 @@
 
 	- Release: 0.1.9
 
-	- Add GetMulti, SetMulti, and RemoveMulti methods.
+	- Add getMulti, setMulti, and removeMulti methods.
+	- compareExchange supports expectation for missing records.
 	- Compatibility to the C++ library: Tkrzw 0.9.21
 
 2021-05-16  Mikio Hirabayashi  <hirarin@gmail.com>
